--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "homepage": "zachredder.com",
+  "homepage": "https://zach-redder.github.io/personal-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
