--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^11.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
