--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@
 
 # production
 /build
-credentials.js
 
 # misc
 .DS_Store
@@ -18,6 +17,7 @@ credentials.js
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
