--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "install": "npm install --legacy-peer-deps",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "install": "npm install",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
