--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "aos": "^2.3.4",
     "cra-template": "1.2.0",
     "firebase": "^11.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.2.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
