--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "aos": "^2.3.4",
     "cra-template": "1.2.0",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.3.0",
+    "firebase-functions": "^6.3.2",
     "next": "^15.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "typescript": "^5.8.3"
   }
 }
