--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase-admin": "^13.3.0",
     "firebase-functions": "^6.3.2",
     "next": "^15.3.2",
+    "node": "^20.19.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
