--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "personal-portfolio",
   "homepage": "https://zachredder.com",
   "version": "0.1.0",
   "private": true,
