--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
     "cra-template": "1.2.0",
     "firebase": "^11.1.0",
